--- a/themes/quasar/source/css/page.styl
+++ b/themes/quasar/source/css/page.styl
@@ -82,12 +82,18 @@
 
 #qwb-preview
   position fixed
+  opacity 0
   flex 0
   width 100%
   height 100%
-  max-width $preview-max-width
+  max-height 0
+  max-width 0
   right 0
-  background-color $white
+  background-color transparent
+  z-index 150
+
+#qwb-page.with-previewer+#qwb-preview
+  opacity 1
 
 
 /* Responsive */
@@ -107,7 +113,11 @@
     .qwb-content
       padding 2rem 4rem
 
-@media screen and (min-width $lg)
+@media screen and (min-width $xl)
 
-  #qwb-page
+  #qwb-page.with-previewer
     margin-right $preview-max-width
+
+  #qwb-preview
+    max-width $preview-max-width
+    background-color $white
